[package]
name = "vsop2013"
version = "0.1.0"
authors = ["Callym <hi@callym.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2"
nom = "5.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.1"
